--- a/clienteXapi/src/index.html
+++ b/clienteXapi/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <!--app-root>Loading...</app-root-->
+  <app-reporte-xapi>Loading ui de informes...</app-reporte-xapi>
 </body>
 </html>
