--- a/clienteXapi/src/index.html
+++ b/clienteXapi/src/index.html
@@ -7,6 +7,58 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Jquery es requerido por bootstrap -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+
+<!-- Bootstrap CDN -->
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
+integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- FIN DE BOOTSTARP CDN -->
+
+
+<!-- MATERIALIZE, lo he hecho como en la web: -->
+<!-- http://materializecss.com/getting-started.html -->
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript , teno jquery arriba-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+
+  <!-- PARA USAR LOS ICONOS CON MATERIALIZE -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- fin de MATERIALIZE -->
+
+<style>
+    body {
+        /* background: cadetblue; */
+        /* indica margenes top-bottom y left-right
+        Si indico el segundo como auto, le estoy indicando que se centre */
+        margin: 0 auto;
+        /* Si deseo no ocupar todo el ancho, puedo indicar los límites.*/
+        /* max-width: 1000px;  */
+        /* En vez de introducir un margin a cada elemento dentro del contenedor, 
+        defino un border y consigo el mismo efecto */
+        
+        /* quito el borde */
+        /* border: 5px solid yellow;
+        border-radius: 5px;  */
+    }
+
+
+</style>
+
+
 </head>
 <body>
   <!--app-root>Loading...</app-root-->
